testsuite/tests/module/T25901_imp_plain_wc.hs
module T25901_imp_plain_wc where

import Data.Proxy (..)
